--- a/src/msgraphapi/appsettings.json
+++ b/src/msgraphapi/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:4000"
+      }
+    }
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
