--- a/k8s-msgraph.yml
+++ b/k8s-msgraph.yml
@@ -49,22 +49,20 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: graph-ingress
+  name: azuread
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    # nginx.ingress.kubernetes.io/add-base-url : "true"
     # Enable client certificate authentication
     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
     nginx.ingress.kubernetes.io/auth-tls-secret: "default/local-ca"
     nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
     nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2 #target URI where the traffic must be redirected
 spec:
   rules:
   - host: 13.93.79.119.nip.io
     http:
       paths:
-      - path: /graph(/|$)(.*) # the service doesn't know about this path, therefore it is rewritten using rewrite annotation https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md
+      - path: /azuread
         backend:
           serviceName: msgraphapi
           servicePort: 80
