--- a/k8s-msgraph.yml
+++ b/k8s-msgraph.yml
@@ -39,7 +39,7 @@ spec:
             value: Production
         volumeMounts:
         - name: secrets
-          mountPath: /app # application path in the container to which the volume gets mounted
+          mountPath: /app/secrets # application secrets path in the container to which the volume gets mounted
           readOnly: true
         imagePullPolicy: Always
       volumes:
@@ -55,10 +55,10 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     # Enable client certificate authentication
-    # nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
-    # nginx.ingress.kubernetes.io/auth-tls-secret: "default/local-ca"
-    # nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
-    # nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
+    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
+    nginx.ingress.kubernetes.io/auth-tls-secret: "default/local-ca"
+    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
+    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
 spec:
   rules:
   - host: 51.124.13.153.nip.io
@@ -68,7 +68,7 @@ spec:
         backend:
           serviceName: msgraphapi
           servicePort: 80
-  # tls:
-  #  - hosts:
-  #    - 51.124.13.153.nip.io
-  #    secretName: 51.124.13.153.nip.io-trusted-tls
+  tls:
+   - hosts:
+     - 51.124.13.153.nip.io
+     secretName: 51.124.13.153.nip.io-trusted-tls
