--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -58,6 +58,11 @@ defaults
     timeout check           10s
     maxconn                 3000
 
+listen  stats
+        bind *:1337
+        stats enable
+        stats uri /
+
 #---------------------------------------------------------------------
 # example how to define user and enable Data Plane API on tcp/5555
 # more information: https://github.com/haproxytech/dataplaneapi and
@@ -80,23 +85,22 @@ frontend  main
     acl url_static       path_beg       -i /static /images /javascript /stylesheets
     acl url_static       path_end       -i .jpg .gif .png .css .js
 
-    use_backend static          if url_static
+    # use_backend static          if url_static
     default_backend             app
 
 #---------------------------------------------------------------------
 # static backend for serving up images, stylesheets and such
 #---------------------------------------------------------------------
-backend static
-    balance     roundrobin
-    server      static1 127.0.0.1:4331 check
-    server      static2 127.0.0.1:4332 check
+# backend static
+#     balance     roundrobin
+#     server      static1 127.0.0.1:4331 check
+#     server      static2 127.0.0.1:4332 check
 
 #---------------------------------------------------------------------
 # round robin balancing between the various backends
 #---------------------------------------------------------------------
 backend app
-    balance     roundrobin
-    server  app1 127.0.0.1:5001 check
-    server  app2 127.0.0.1:5002 check
-    server  app3 127.0.0.1:5003 check
-    server  app4 127.0.0.1:5004 check
+    mode    http
+    balance roundrobin
+    server  msgraphapi1 msgraphapi:4000
+    # server  msgraphapi2 msgraphapi:5002 check
