--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -24,7 +24,8 @@ global
     #
     #    local2.*                       /var/log/haproxy.log
     #
-    log         127.0.0.1 local2
+    #log         127.0.0.1 local2 # send logs to Syslog server listening on 127.0.0.1 via the standard, user-defined Syslog facility local2
+    log stdout format raw daemon debug
 
     chroot      /var/lib/haproxy
     pidfile     /var/run/haproxy.pid
