Enable prometheus metrics endpoint

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -52,7 +52,7 @@ defaults
     retries                 3
     timeout http-request    10s
     timeout queue           1m
-    timeout connect         10s
+    timeout connect         10s # retry interval if TCP connection can't be established to a backend server
     timeout client          1m
     timeout server          1m
     timeout http-keep-alive 10s
@@ -82,6 +82,8 @@ listen  stats
 frontend  main
     bind *:80
     # bind *:443 ssl # To be completed ....
+    option http-use-htx
+    http-request use-service prometheus-exporter if { path /metrics }
 
     acl url_static       path_beg       -i /static /images /javascript /stylesheets
     acl url_static       path_end       -i .jpg .gif .png .css .js
@@ -103,5 +105,5 @@ frontend  main
 backend app
     mode    http
     balance roundrobin
-    server  msgraphapi1 msgraphapi:4000
+    server  msgraphapi1 msgraphapi:4000 check
     # server  msgraphapi2 msgraphapi:5002 check
