Enable running the app with both nginx and haproxy

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -53,8 +53,8 @@ defaults
     timeout http-request    10s
     timeout queue           1m
     timeout connect         10s # retry interval if TCP connection can't be established to a backend server
-    timeout client          1m
-    timeout server          1m
+    timeout client          1m # the maximum inactivity time on the client, how long to wait before disconnecting the client
+    timeout server          1m # the maximum inactivity time on the server, how long to wait for a response from the backend server
     timeout http-keep-alive 10s
     timeout check           10s
     maxconn                 3000
