--- a/docker-compose-nginx.yml
+++ b/docker-compose-nginx.yml
@@ -1,15 +1,24 @@
-version: "3.3"
+version: "3.9"
 
 services:
-  haproxy: 
-    image: hemantksingh/haproxy:latest
-    container_name: haproxy
+  nginx: 
+    image: hemantksingh/nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+      args:
+        - authUsername=admin
+        - authPassword=${authPassword}
+    container_name: nginx
     ports:
       - 80:80
-      - 1337:1337
-  
+      - 443:443
+      
   msgraphapi:
     image: hemantksingh/msgraphapi:latest
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: msgraphapi
     expose:
       - "4000"
