--- a/docker-compose-nginx.yml
+++ b/docker-compose-nginx.yml
@@ -5,7 +5,7 @@ services:
     image: hemantksingh/nginx:latest
     build:
       context: .
-      dockerfile: Dockerfile.nginx
+      dockerfile: nginx/Dockerfile
       args:
         - authUsername=admin
         - authPassword=${authPassword}
