--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -103,7 +103,9 @@ frontend  main
 # round robin balancing between the various backends
 #---------------------------------------------------------------------
 backend app
+    default-server maxconn 30  check  observe layer7  error-limit 2  on-error mark-down  inter 2s  rise 10  slowstart 5s
     mode    http
     balance roundrobin
-    server  msgraphapi1 msgraphapi:4000 check
-    # server  msgraphapi2 msgraphapi:5002 check
+    option httpchk GET /health
+    server  msgraphapi1 msgraphapi1:4000 
+    server  msgraphapi2 msgraphapi2:4000
