Add ratelimiting using haproxy maps

--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -1,2 +1,3 @@
 FROM haproxytech/haproxy-ubuntu:2.0
 COPY haproxy/haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
+COPY haproxy/rates.map /etc/haproxy/maps/rates.map
