--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -90,6 +90,24 @@ frontend  main
 
     # use_backend static          if url_static
     default_backend             app
+    # Set up stick table to track request rates
+    stick-table type binary len 8 size 1m expire 10s store http_req_rate(10s)
+
+    # Track client by base32+src (Host header + URL path + src IP)
+    http-request track-sc0 base32+src
+
+    # Check map file to get rate limit for path
+    http-request set-var(req.rate_limit)  path,map_beg(/etc/haproxy/maps/rates.map)
+
+    # Client's request rate is tracked
+    http-request set-var(req.request_rate)  base32+src,table_http_req_rate(main)
+
+    # Subtract the current request rate from the limit
+    # If less than zero, set rate_abuse to true
+    acl rate_abuse var(req.rate_limit),sub(req.request_rate) lt 0    
+
+    # Deny if rate abuse
+    http-request deny deny_status 429 if rate_abuse
 
 #---------------------------------------------------------------------
 # static backend for serving up images, stylesheets and such
@@ -106,6 +124,5 @@ backend app
     default-server maxconn 30  check  observe layer7  error-limit 2  on-error mark-down  inter 2s  rise 10  slowstart 5s
     mode    http
     balance roundrobin
-    option httpchk GET /health
     server  msgraphapi1 msgraphapi1:4000 
     server  msgraphapi2 msgraphapi2:4000
