--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -37,6 +37,8 @@ global
     # turn on stats unix socket
     stats socket /var/lib/haproxy/stats
 
+    stats socket /var/run/haproxy.sock user haproxy group haproxy mode 660 level admin expose-fd listeners
+
 #---------------------------------------------------------------------
 # common defaults that all the 'listen' and 'backend' sections will
 # use if not designated in their block
