Not run dataplaneapi at build

--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -5,9 +5,8 @@ COPY haproxy/dataplaneapi.hcl /etc/haproxy/dataplaneapi.hcl
 
 ADD https://github.com/haproxytech/dataplaneapi/releases/download/v2.3.3/dataplaneapi_2.3.3_Linux_x86_64.tar.gz /tmp
 
-RUN echo $(ls -l /tmp)
+RUN ls -al /tmp
 RUN tar -zxvf /tmp/dataplaneapi_2.3.3_Linux_x86_64.tar.gz
 RUN chmod +x build/dataplaneapi
-COPY build/dataplaneapi /usr/local/bin/
-
-RUN dataplaneapi -f /etc/haproxy/dataplaneapi
+# RUN ls -al build
+# COPY build/dataplaneapi/ /usr/local/bin/
