--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -71,12 +71,12 @@ listen  stats
 # more information: https://github.com/haproxytech/dataplaneapi and
 #   https://www.haproxy.com/documentation/hapee/2-0r1/configuration/dataplaneapi/
 #---------------------------------------------------------------------
-# userlist haproxy-dataplaneapi
-#     user admin insecure-password mypassword
-#
-# program api
-#    command /usr/bin/dataplaneapi --host 0.0.0.0 --port 5555 --haproxy-bin /usr/sbin/haproxy --config-file /etc/haproxy/haproxy.cfg --reload-cmd "kill -SIGUSR2 1" --reload-delay 5 --userlist hapee-dataplaneapi
-#    no option start-on-reload
+userlist haproxy-dataplaneapi
+    user admin insecure-password adminpwd
+
+program api
+   command /usr/bin/dataplaneapi --host 0.0.0.0 --port 5555 --haproxy-bin /usr/sbin/haproxy --config-file /etc/haproxy/haproxy.cfg --reload-cmd "kill -SIGUSR2 1" --reload-delay 5 --userlist hapee-dataplaneapi
+   no option start-on-reload
 
 #---------------------------------------------------------------------
 # main frontend which proxys to the backends
