Enable dataplaneapi via haproxy config(#4)
* Initial config

* Not run dataplaneapi at build

* Enable via haproxy config

* Fix haproxy.cfg path

* Update docs

* Update docs

* Update docs

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -37,6 +37,8 @@ global
     # turn on stats unix socket
     stats socket /var/lib/haproxy/stats
 
+    stats socket /var/run/haproxy.sock user haproxy group haproxy mode 660 level admin expose-fd listeners
+
 #---------------------------------------------------------------------
 # common defaults that all the 'listen' and 'backend' sections will
 # use if not designated in their block
@@ -69,12 +71,12 @@ listen  stats
 # more information: https://github.com/haproxytech/dataplaneapi and
 #   https://www.haproxy.com/documentation/hapee/2-0r1/configuration/dataplaneapi/
 #---------------------------------------------------------------------
-# userlist haproxy-dataplaneapi
-#     user admin insecure-password mypassword
-#
-# program api
-#    command /usr/bin/dataplaneapi --host 0.0.0.0 --port 5555 --haproxy-bin /usr/sbin/haproxy --config-file /etc/haproxy/haproxy.cfg --reload-cmd "kill -SIGUSR2 1" --reload-delay 5 --userlist hapee-dataplaneapi
-#    no option start-on-reload
+userlist haproxy-dataplaneapi
+    user admin insecure-password adminpwd
+
+program api
+   command /usr/bin/dataplaneapi --host 0.0.0.0 --port 5555 --haproxy-bin /usr/sbin/haproxy --config-file /usr/local/etc/haproxy/haproxy.cfg --reload-cmd "kill -SIGUSR2 1" --reload-delay 5 --userlist haproxy-dataplaneapi
+   no option start-on-reload
 
 #---------------------------------------------------------------------
 # main frontend which proxys to the backends
