Add API response caching

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -61,6 +61,11 @@ defaults
     timeout check           10s
     maxconn                 3000
 
+cache apicache
+    total-max-size 4095   # MB
+    max-object-size 10000 # bytes
+    max-age 30            # seconds
+
 listen  stats
         bind *:1337
         stats enable
@@ -125,6 +130,10 @@ frontend  main
 backend app
     default-server maxconn 30  check  observe layer7  error-limit 2  on-error mark-down  inter 2s  rise 10  slowstart 5s
     mode    http
+    http-request cache-use apicache
+    http-response cache-store apicache
+    http-response set-header X-Cache-Status HIT if !{ srv_id -m found }
+    http-response set-header X-Cache-Status MISS if { srv_id -m found }
     balance roundrobin
     server  msgraphapi1 msgraphapi1:4000 
     server  msgraphapi2 msgraphapi2:4000
